@@ -1619,14 +1619,15 @@ See also: string functions
   other character(s) or words are substituted for whatever follows the % 
   symbol. Some common substitutions are:
 
-     %B = a single space (just like [space(1)])
-     %R = a blank line
-     %T = A tab. Note that this may not look right on some screens.
+     %b = a single space (just like [space(1)])
+     %r = a blank line
+     %t = A tab. Note that this may not look right on some screens.
      %# = dbref of the ENACTOR (object that set off the command)
+     %n = the ENACTOR's name
      %N = the ENACTOR's name, first letter capitalized
-     %n = the ENACTOR's name, first letter as-is
      %~ = the ENACTOR's accented name
-     %: = the enactor's unique identifier, like objid(%#)
+     %: = the ENACTOR's unique identifier, like objid(%#)
+     %% = a literal %
      
   Case makes a difference in all substitutions; capitalizing the first
   letter after the % will capitalize the first letter of the resulting
@@ -1642,12 +1643,12 @@ See also: string functions
      %p = possessive pronoun: his, her, its, their. Same as poss(%#).
      %a = absolute possessive: his, hers, its, theirs. Same as aposs(%#).
 
-    Case makes a difference: %S will return He, She, It, They. If you need
-    an actual % symbol, use %% to get it.
+    Case makes a difference: %S will return He, She, It, They.
 
   Some attributes can be retrieved via substitutions:
      %va-%vz = the contents of the object's VA-VZ attributes, respectively
      %wa-%wz, %xa-%xz = as above, for WA-WZ and XA-XZ
+  These are the equivilent of get(me/<attribute>).
 
 (continued in help substitutions3)
 & SUBSTITUTIONS3
@@ -1663,6 +1664,8 @@ See also: string functions
     %? = The current function invocation and depth counts
     %+ = The number of arguments passed to the current ufun.
     %qN = the equivalent of r(N), a register set by a setq() function.
+    %iN = equivilent of itext(N), the list element for iter()/@dolist.
+    %$N = equivilent of stext(N), the <string> in switch()/@switch.
  
 (continued in help substitutions4)
 & SUBSTITUTIONS4
