@@ -1003,6 +1003,8 @@ do_switch(dbref player, char *expression, char **argv, dbref cause,
   char buff[BUFFER_LEN], *bp;
   char const *ap;
   char *tbuf1;
+  PE_Info *pe_info;
+  int i = 0;
 
   if (!argv[1])
     return;
@@ -1029,7 +1031,16 @@ do_switch(dbref player, char *expression, char **argv, dbref cause,
         : local_wild_match(buff, expression)) {
       any = 1;
       tbuf1 = replace_string("#$", expression, argv[a + 1]);
-      parse_que(player, tbuf1, cause, NULL);
+      pe_info = make_pe_info();
+      if (global_eval_context.pe_info->switch_nesting >= 0) {
+        for (i = 0; i <= global_eval_context.pe_info->switch_nesting; i++) {
+          pe_info->switch_text[i] = mush_strdup(global_eval_context.pe_info->switch_text[i], "switch_arg");
+        }
+      }
+      pe_info->switch_text[i] = mush_strdup(expression, "switch_arg");
+      pe_info->switch_nesting = i;
+      pe_info->local_switch_nesting = i;
+      parse_que(player, tbuf1, cause, pe_info);
       mush_free(tbuf1, "replace_string.buff");
     }
   }
@@ -1037,7 +1048,16 @@ do_switch(dbref player, char *expression, char **argv, dbref cause,
   /* do default if nothing has been matched */
   if ((a < MAX_ARG) && !any && argv[a]) {
     tbuf1 = replace_string("#$", expression, argv[a]);
-    parse_que(player, tbuf1, cause, NULL);
+    pe_info = make_pe_info();
+    if (global_eval_context.pe_info->switch_nesting >= 0) {
+      for (i = 0; i <= global_eval_context.pe_info->switch_nesting; i++) {
+        pe_info->switch_text[i] = mush_strdup(global_eval_context.pe_info->switch_text[i], "switch_arg");
+      }
+    }
+    pe_info->switch_text[i] = mush_strdup(expression, "switch_arg");
+    pe_info->switch_nesting = i;
+    pe_info->local_switch_nesting = i;
+    parse_que(player, tbuf1, cause, pe_info);
     mush_free(tbuf1, "replace_string.buff");
   }
 
